# hillel-cpp-course

./: .gitignore  README.md
homework01/: README.md  homework01.cpp
homework02/: README.md  homework02.cpp
homework03/: README.md  homework03.cpp
homework04/: README.md  homework04.cpp
homework05/: README.md  homework05.cpp
homework06/: README.md
homework06/docs/: specifications.md
homework07/MathLib/: MathLib.h
homework07/MathLib/MathCalculator/: main.cpp
homework07/MathLib/MathLib/: MathLib.cpp
homework07/MathLib/x64/Debug/: MathLib.lib
homework07/x64/Debug/: MathLib.lib
homework08/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  TutorialConfig.h.in  conanfile.txt  main.cpp
homework08/examples/: CMakeLists.txt  basic_usage.cpp
homework08/src/app/: CMakeLists.txt  app.cpp
homework08/src/app/include/app/: app.h
homework08/src/app/src/: app.cpp  main.cpp
homework08/src/core/: CMakeLists.txt
homework08/src/core/include/core/: task.h
homework08/src/core/src/: task.cpp
homework08/tests/: CMakeLists.txt  test_core.cpp
